--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loopint | Workflow loops and intelligence system</title>
+    
+    <!-- Preload critical fonts -->
+    <link rel="preload" href="/src/assets/fonts/Comfortaa-Regular.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="/src/assets/fonts/Comfortaa-Medium.ttf" as="font" type="font/ttf" crossorigin>
   </head>
   <body>
     <div id="root"></div>
